2023-12-07T00:46:23Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7122199668 # 2150
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-12-07
* notice: last 14d: unq all: 12 27
* notice: prev accum: outdated-unq outdated-all / unq all: 806 1485 / 826 1514
* notice: next accum: outdated-unq outdated-all / unq all: 807 1487 / 826 1514
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-11-22] / []

2023-12-06T00:46:55Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7108580513 # 2147
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-12-06
* notice: last 14d: unq all: 12 29
* notice: prev accum: outdated-unq outdated-all / unq all: 805 1483 / 826 1514
* notice: next accum: outdated-unq outdated-all / unq all: 806 1485 / 826 1514
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-11-21] / []

2023-12-05T00:46:50Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7094568702 # 2144
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-12-05
* notice: last 14d: unq all: 12 31
* notice: prev accum: outdated-unq outdated-all / unq all: 804 1481 / 826 1514
* notice: next accum: outdated-unq outdated-all / unq all: 805 1483 / 826 1514
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-11-20] / []

2023-12-04T08:13:19Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7083755448 # 2142