@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-12-07T00:46:23Z",
-  "count_outdated" : 1487,
-  "uniques_outdated" : 807,
+  "timestamp" : "2023-12-08T00:46:39Z",
+  "count_outdated" : 1498,
+  "uniques_outdated" : 815,
   "count" : 1514,
   "uniques" : 826,
   "clones" : [
-    {
-      "timestamp": "2023-11-23T00:00:00Z",
-      "count": 11,
-      "count_minmax": [ 1, 11 ],
-      "count_decinc": [ 0, 11 ],
-      "uniques": 8,
-      "uniques_minmax": [ 1, 8 ],
-      "uniques_decinc": [ 0, 8 ]
-    },
     {
       "timestamp": "2023-11-24T00:00:00Z",
       "count": 2,
