@@ -1,12 +1,7 @@
 {
-  "count": 27,
-  "uniques": 12,
+  "count": 16,
+  "uniques": 5,
   "clones": [
-    {
-      "timestamp": "2023-11-23T00:00:00Z",
-      "count": 11,
-      "uniques": 8
-    },
     {
       "timestamp": "2023-11-24T00:00:00Z",
       "count": 2,
