@@ -1,3 +1,12 @@
+2023-12-08T00:46:39Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7135853197 # 2153
+* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-12-08
+* notice: last 14d: unq all: 5 16
+* notice: prev accum: outdated-unq outdated-all / unq all: 807 1487 / 826 1514
+* notice: next accum: outdated-unq outdated-all / unq all: 815 1498 / 826 1514
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2023-11-23] / []
+
 2023-12-07T00:46:23Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7122199668 # 2150
 * notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-12-07
